--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /var/
 /vendor/
 .env
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
