--- a/package.json
+++ b/package.json
@@ -1,42 +1,16 @@
 {
-  "devDependencies": {
-    "@babel/preset-react": "^7.8.3",
-    "core-js": "^3.0.0",
-    "jest": "^25.4.0",
-    "regenerator-runtime": "^0.13.2",
-    "webpack-notifier": "^1.6.0"
-  },
-  "license": "UNLICENSED",
-  "private": true,
-  "scripts": {
-    "dev-server": "encore dev-server",
-    "dev": "encore dev",
-    "watch": "encore dev --watch",
-    "build": "encore production --progress",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/icons": "^4.9.1",
-    "@symfony/webpack-encore": "^0.30.2",
-    "axios": "^0.18.1",
-    "babel": "^6.23.0",
-    "dotenv": "^8.2.0",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.8.6",
-    "react-day-picker": "^7.4.8",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-search-box": "^2.0.2",
-    "react-toastify": "^5.5.0",
-    "webpack": "^4.43.0"
-  },
-  "name": "abbottapp",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
-  "directories": {
-    "test": "tests"
-  },
-  "author": "",
-  "description": ""
+    "devDependencies": {
+        "@symfony/webpack-encore": "^0.30.0",
+        "core-js": "^3.0.0",
+        "regenerator-runtime": "^0.13.2",
+        "webpack-notifier": "^1.6.0"
+    },
+    "license": "UNLICENSED",
+    "private": true,
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    }
 }
