--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> lexik/jwt-authentication-bundle ###
 # /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
@@ -6,3 +5,10 @@
 /var/
 /vendor/
 .env
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
