--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@symfony/webpack-encore": "^0.30.2",
     "axios": "^0.18.1",
     "babel": "^6.23.0",
+    "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "jwt-decode": "^2.2.0",
+    "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
